test_suite/tests/fail/cross_enum_type.rs
use ronky::Exported;

#[derive(Exported)]
enum Mixed {
    Normal,
    Tagged { name: String },
}

fn main() {}
